Fix: Too much margin on contact container fixed

--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,16 @@ footer p{
   font-weight: 400;
   line-height: 20px;
 }
+.contact-container{
+  max-width: 720px;
+  margin: 156px auto 0 
+}
+#btn_submit{
+  width: 100%;
+  margin: 32px 0 150px;
+  font-size: 16px;
+  font-weight: 600;
+}
 @media (max-width: 425px) {
   .card {
     height: 68px !important;
@@ -78,10 +88,17 @@ footer p{
     font-size: 14px;
   }
   footer div svg{
-width: 138.77px;
+    width: 138.77px;
   }
   footer div img{
     width: 99.1px;
-
+    
+  }
+  .contact-container {
+    margin-top: 64px !important;
+    
+  }
+  #btn_submit{
+    margin-bottom: 64px;
   }
 }
